feature/user --unfinished
